rename CoreReflector to ClassReflector.